fix: better contrast for sway progress bar

--- a/swayosd.css
+++ b/swayosd.css
@@ -10,8 +10,9 @@ window#osd {
     border: 3px solid @border-color;
 }
 
-progressbar#osd trough{
-  border-radius: 0;
-    background-color: #1E1E1E;
-    color: #1E1E1E;
+progressbar {
+    border-radius: 0px;
+  }
+trough {
+    background: #1E1E1E;
 }
